--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
             ]
         };
 
-        let supabase = null;
+        // --- KEY FIX: Renamed 'supabase' to 'supabaseClient' to avoid conflict ---
+        let supabaseClient = null;
         let DB = {};
         let currentTable = null;
         let editIndex = -1;
@@ -404,7 +405,8 @@
         
         async function initSupabase() {
             try {
-                supabase = window.supabase.createClient(SUPABASE_CONFIG.url, SUPABASE_CONFIG.key);
+                // Initialize the client
+                supabaseClient = window.supabase.createClient(SUPABASE_CONFIG.url, SUPABASE_CONFIG.key);
                 return true;
             } catch (error) {
                 console.error('Supabase connection error:', error);
@@ -435,7 +437,7 @@
 
         async function loadAllTablesFromDB() {
             try {
-                const { data, error } = await supabase
+                const { data, error } = await supabaseClient
                     .from('pubali_tables')
                     .select('*');
                 
@@ -468,7 +470,7 @@
 
         async function saveTableToDB(tableName, tableData) {
             try {
-                const { data, error } = await supabase
+                const { data, error } = await supabaseClient
                     .from('pubali_tables')
                     .upsert({
                         table_name: tableName,
@@ -486,7 +488,7 @@
 
         async function deleteTableFromDB(tableName) {
             try {
-                const { error } = await supabase
+                const { error } = await supabaseClient
                     .from('pubali_tables')
                     .delete()
                     .eq('table_name', tableName);
